# mega-agent

./: .gitignore  LICENSE  README.md  install_mega_agent.sh  mega_agent.py  pyproject.toml  requirements.txt  setup.py  test_color_epaper.py
config/: settings.json
modules/: __init__.py  business_integrations.py  industrial_protocols.py  integrations.py  mesh_network.py  monitoring.py
waveshare_epd/: epd2in13b_v3.py
