# pyproject.toml
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mega-agent"
version = "1.0.1" # Увеличим версию
description = "Мега-агент для Orange Pi Zero 2W с 4-цветным e-paper дисплеем и расширенными возможностями"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Ваше Имя", email = "ваш@email.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# ВАЖНО: RPi.GPIO и spidev ИСКЛЮЧЕНЫ отсюда
dependencies = [
    "Flask>=2.3.3",
    "requests>=2.31.0",
    "cryptography>=41.0.4",
    "python-telegram-bot>=20.6",
    "apscheduler>=3.10.4",
    "Pillow>=10.0.1",
    "pyserial",
    "pymodbus",
    "paho-mqtt",
    "pandas",
    "numpy",
    # Добавьте другие зависимости, которые устанавливаются через pip
]

[project.optional-dependencies]
# ... (опциональные зависимости, если нужны)

[project.urls]
Homepage = "https://github.com/ваш-логин/mega-agent"
Repository = "https://github.com/ваш-логин/mega-agent.git"
